<resources>
    <string name="app_name">ServicesTraining</string>
    <string name="start_service">start service</string>
    <string name="service">service</string>
    <string name="foreground_service">foreground_service</string>
    <string name="job_service">job_service</string>
    <string name="job_intent_service">job_intent_service</string>
    <string name="work_manager">work_manager</string>
    <string name="alarm_manager">alarm_manager</string>
    <string name="intent_service">intent service</string>
</resources>